--- a/기능 정의.md
+++ b/기능 정의.md
@@ -1,38 +1,58 @@
 # 기능 정의
 
 1. 지도
-   1. 스탬프 기반 내가 간 곳은 활성화, 안간곳은 비활성화
-   2. 각 장소를 터치하면 주소, 별점 표시
+   1. 로그인을 했을 경우
+      1. 스탬프 기반 내가 간 곳은 활성화, 안간곳은 비활성화
+   2. 로그인을 하지 않았을 경우
+      1. 스탬프 기반 모든 장소가 비활성화
+   3. 각 장소를 터치하면 주소, 별점 표시
 2. 순위
    1. 실시간 별점 기반 순위, 동점일 경우 가나다 순
 3. 장소 상세 정보 보기
-   1. 사진 표시
-   2. 주소 표시
-   3. 별점
-      1. 내가(로그인 객체) 해당 장소를 처음 방문했을 경우 스탬프 찍어라 표시
-      2. 내가(로그인 객체) 해당 장소의 스탬프를 찍었을 경우 평가 하라고 표시
-      3. 내가(로그인 객체)이 해당 장소를 평가했을 경우(별점 작성) 내 별점 표시
-   4. 댓글 - 최신순
-   5. 각 댓글 선택시 댓글 상세 보기
-      1. 사진은 총 4개 까기, 각 사진 선택시 사진 크게 보기
+   1. 로그인을 했을 경우
+      1. 사진 표시
+      2. 주소 표시
+      3. 별점
+         1. 내가(로그인 객체) 해당 장소를 처음 방문했을 경우 스탬프 찍어라 표시
+         2. 내가(로그인 객체) 해당 장소의 스탬프를 찍었을 경우 평가 하라고 표시
+         3. 내가(로그인 객체)이 해당 장소를 평가했을 경우(별점 작성) 내 별점 표시
+      4. 댓글 - 최신순
+         1. 각 댓글 선택시 댓글 상세 보기
+         2. 사진은 총 4개 까기, 각 사진 선택시 사진 크게 보기
+   2. 로그인을 하지 않았을 경우
+      1. 사진 표시
+      2. 주소 표시
+      3. 별점
+         1. 로그인 해 주세요 표시
+      4. 댓글 - 최신순
+         1. 각 댓글 선택시 댓글 상세 보기
+         2. 사진은 총 4개 까기, 각 사진 선택시 사진 크게 보기
 4. 스탬프 찍기
-   1. 해당 장소의 스탬프를 찍었을 경우
-      1. 카테고리 표시
-      2. 순위 표시
-      3. 적립날짜 표시
-   2. 해당 장소의 스탬프를 찍지 않았을 경우
-      1. 바로 카메라 표시
-      2. 스탬프 찍었을 경우 해당 장소의 정보 표시(이 내용은 장소 상세 정보 보기)
-         1. 댓글 갯수와 사진 갯수도 표시
-         2. 노래 재생............
+   1. 로그인을 했을 경우
+      1. 해당 장소의 스탬프를 찍었을 경우
+         1. 카테고리 표시
+         2. 순위 표시
+         3. 적립날짜 표시
+      2. 해당 장소의 스탬프를 찍지 않았을 경우
+         1. 바로 카메라 표시
+         2. 스탬프 찍었을 경우 해당 장소의 정보 표시(이 내용은 장소 상세 정보 보기)
+            1. 댓글 갯수와 사진 갯수도 표시
+            2. 노래 재생............
+   2. 로그인을 하지 않았을 경우
+      1. 로그인 페이지로 리다이렉트
 5. 마이 페이지
-   1. 카톡 기반 프로필 사진 표시
-   2. 카톡 기반 이름 표시
-   3. 최근 스탬프 적립 날짜 표시
-   4. 스탬프 몇개 모았는지 표시
-   5. 스탬프 적립내역 조회
-   6. 내 정보 수정
-      1. 프로필 사진
-      2. 닉네임(이름)
+   1. 로그인을 했을 경우
+      1. 카톡 기반 프로필 사진 표시
+      2. 카톡 기반 이름 표시
+      3. 최근 스탬프 적립 날짜 표시
+      4. 스탬프 몇개 모았는지 표시
+      5. 스탬프 적립내역 조회
+      6. 내 정보 수정
+         1. 프로필 사진
+         2. 닉네임(이름)
+   2. 로그인을 하지 않았을 경우
+      1. 로그인 페이지로 리다이렉트
 6. 로그인
-   1. 디자이너 일 안함
+   1. 카카오톡 로그인
+      1. 로그인 성공시 토큰 반환
+   2. 게스트 계정으로 들어가기
